# configure.in for liberty
# LIBERTY: INCIDENT RESPONSE SUPPORT FOR END-USERS
# Copyright (C) 2004    Kees Leune <kees@uvt.nl>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
# $Id$

AC_PREREQ(2.57)
AC_INIT
AM_INIT_AUTOMAKE(air, `cat VERSION`)

AC_DEFINE_DIR(SYSCONF_PATH, sysconfdir)
AC_DEFINE_DIR(SCRIPT_PATH, datadir/liberty)

AC_OUTPUT([Makefile
           doc/Makefile
           lib/Makefile
           html/Makefile
           html/pic/Makefile
         ])
