# Makefile.am for AIR
# $Id$
docdir =  @AIRT_DOCDIR@/database
doc_DATA = 00-CHANGES.sql airtbootstrap.sql airtschema.sql import_queue.sql \
	airtschema-from-20050421.1-to-20050607.1.sql \
	airtschema-from-20050607.1-to-20050610.1.sql \
	airtschema-from-20050610.1-to-20050627.1.sql \
	airtschema-from-20050718.1-to-20050726.1.sql \
	airtschema-from-20050830.1-to-20050926.1.sql \
	airtschema-from-20050830.1-to-20050926.1.sql \
	airtschema-from-20051010.1-to-20051021.1.sql \
	airtschema-from-20051021.1-to-20050111.1.sql \
	20051108.1.sql 20051109.1.sql 20051116.1.sql 20051123.1.sql 20060224.1.sql \
	20060322.1.sql 20060324.1.sql 20060329.1.sql 20060512.1.sql 20060515.1.sql \
	20060726.1.sql 20060807.1.sql

EXTRA_DIST = $(doc_DATA)
