# Makefile.am for AIR
# $Id$
docdir =  @AIRT_DOCDIR@/database
doc_DATA = 00-CHANGES.sql airtperms.sql airtbootstrap.sql \
    airtschema.sql import_queue.sql \
	airtschema-from-20050421.1-to-20050607.1.sql \
	airtschema-from-20050607.1-to-20050610.1.sql \
	airtschema-from-20050610.1-to-20050627.1.sql \
	airtschema-from-20050718.1-to-20050726.1.sql \
	airtschema-from-20050830.1-to-20050926.1.sql \
	airtschema-from-20050830.1-to-20050926.1.sql \
	airtschema-from-20051010.1-to-20051021.1.sql \
	airtschema-from-20051021.1-to-20050111.1.sql \
	20051108.1.sql 20051109.1.sql 20051116.1.sql 20051123.1.sql 20060224.1.sql \
	20060322.1.sql 20060324.1.sql 20060329.1.sql 20060512.1.sql 20060515.1.sql \
	20060726.1.sql 20060807.1.sql 20060810.1.sql 20061129.1.sql 20061206.1.sql \
	20070531.1.sql 20070601.1.sql 20070611.1.sql 20070621.1.sql 20070705.1.sql \
	20070731.1.sql 20070905.1.sql 20071221.1.sql 20080128.1.sql 20080201.1.sql \
	20080215.1.sql 20080229.1.sql 20080328.1.sql 20080328.2.sql 20080402.1.sql \
	20080403.1.sql 20080523.1.sql 20080730.1.sql 20080731.1.sql 20080906.1.sql \
	20080924.1.sql 20081031.1.sql 20081219.1.data.sql 20081219.1.schema.sql \
	20081231.1.sql

EXTRA_DIST = $(doc_DATA)
